--- a/src/components/middleSliderTwo/middleSliderTwo.module.scss
+++ b/src/components/middleSliderTwo/middleSliderTwo.module.scss
@@ -15,7 +15,7 @@
     -o-transform: translate(0px, 0);
 }
 
-.slider_blockk {
+.slider_block {
     display: flex;
     align-items: center;
     justify-content: center;
